made lists and filled them

--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Curriculum vitae</title>
 </head>
 <body>
-	
+	<h1>Yaroslav Livachov</h1>
+	<img src="/img/my photo.jpg" alt="My photo" width="250" height="250">
+	<h3>Student</h3>
+	<h2>Education experience</h2>
+	<p><strong>2022 - 2028 </strong>Studying at <a href="https://khai.edu/ua/">XAI</a> the 5th faculty</p>
+	<p><strong>2011 - 2022 </strong>Studied at the <a href="https://zplicey34.school.social">Zaporozhye Academic Lyceum №34</a></p>
+	<h2>Skills:</h2>
+	<ul>
+		<li>HTML</li>
+		<li>Computer techologies</li>
+		<li>Computer graphics radio engineering</li>
+	</ul>
+	<h2>Achievments:</h2>
+	<ol>
+		<li>Won the regional Olympiad in programming</li>
+		<li>Entered the institute on a budget</li>
+		<li>Received the certificate of assertive communication</li>
+	</ol>
 </body>
 </html>
