Education experience reworked into a list

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 	<img src="/img/my photo.jpg" alt="My photo" width="250" height="250">
 	<h3>Student</h3>
 	<h2>Education experience</h2>
-	<p><strong>2022 - 2028 </strong>Studying at <a href="https://khai.edu/ua/">XAI</a> the 5th faculty</p>
-	<p><strong>2011 - 2022 </strong>Studied at the <a href="https://zplicey34.school.social">Zaporozhye Academic Lyceum №34</a></p>
+	<dl>
+	<dt><strong>2022 - 2028 </strong>Studying at <a href="https://khai.edu/ua/">XAI</a> the 5th faculty</dt>
+	<dt><strong>2011 - 2022 </strong>Studied at the <a href="https://zplicey34.school.social">Zaporozhye Academic Lyceum №34</a></dt>
+	</dl>
 	<h2>Skills:</h2>
 	<ul>
 		<li>HTML</li>
