--- a/index.html
+++ b/index.html
@@ -11,10 +11,36 @@
 	<img src="/img/my photo.jpg" alt="My photo" width="250" height="250">
 	<h3>Student</h3>
 	<h2>Education experience</h2>
-	<dl>
-	<dt><strong>2022 - 2028 </strong>Studying at <a href="https://khai.edu/ua/">XAI</a> the 5th faculty</dt>
-	<dt><strong>2011 - 2022 </strong>Studied at the <a href="https://zplicey34.school.social">Zaporozhye Academic Lyceum №34</a></dt>
-	</dl>
+	<table border="1" cellspacing="0" cellpadding="10px">
+		<tr>
+			<td><strong>Period:</strong></td>
+			<th><strong position="center">Position</strong></th>
+		</tr>
+		<tbody>
+			<tr>
+				<td>2022 - 2028</td>
+				<td>Studying at <a href="https://khai.edu/ua/">XAI</a> the 5th faculty</td>
+			</tr>
+			<tr>
+				<td rowspan="2"><strong>Description</strong></td>
+				<td>I study at the Faculty of Radio Electronics, Computer Systems and Infocommunication</td>				
+			</tr>
+			<tr>
+				<td>I'm on a scholarship with no chance to fly out of it</td>
+			</tr>
+			<tr>
+				<td>2011 - 2022</td>
+				<td>Studied at the <a href="https://zplicey34.school.social">Zaporozhye Academic Lyceum №34</a></td>
+			</tr>
+			<tr>
+				<td rowspan="2"><strong>Description</strong></td>
+				<td>He was the winner of Olympiads in programming and information and computer technologies</td>
+			</tr>
+			<tr>
+				<td>Helped at school on technical issues</td>
+			</tr>
+		</tbody>
+	</table>
 	<h2>Skills:</h2>
 	<ul>
 		<li>HTML</li>
