--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 	<h3>Student</h3>
 	<h2>Education experience</h2>
 	<table border="1" cellspacing="0" cellpadding="10px">
-		<tr>
-			<td><strong>Period:</strong></td>
-			<th><strong position="center">Position</strong></th>
-		</tr>
+		<thead>
+			<tr>
+				<td><strong>Period:</strong></td>
+				<th><strong position="center">Position</strong></th>
+			</tr>
+		</thead>
 		<tbody>
 			<tr>
 				<td>2022 - 2028</td>
