made a job offer form

--- a/index.html
+++ b/index.html
@@ -49,11 +49,12 @@
 		<li>Computer techologies</li>
 		<li>Computer graphics radio engineering</li>
 	</ul>
-	<h2>Achievments:</h2>g
+	<h2>Achievments:</h2>
 	<ol>
 		<li>Won the regional Olympiad in programming</li>
 		<li>Entered the institute on a budget</li>
 		<li>Received the certificate of assertive communication</li>
 	</ol>
+	<a href="/form.html">Offer a job</a>
 </body>
 </html>
