--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="css/style.css" rel="stylesheet" type="text/css">
 	<title>Curriculum vitae</title>
 </head>
 <body>
-	<h1>Yaroslav Livachov</h1>
+	<h1 class="full-name">Yaroslav Livachov</h1>
 	<img src="/img/my photo.jpg" alt="My photo" width="250" height="250">
-	<h3>Student</h3>
+	<h3 class="heading">Student</h3>
 	<h2>Education experience</h2>
-	<table border="1" cellspacing="0" cellpadding="10px">
+	<table border="1" cellspacing="0" cellpadding="10x">
 		<thead>
 			<tr>
-				<td><strong>Period:</strong></td>
-				<th><strong position="center">Position</strong></th>
+				<th class="topic">Period:</th>
+				<th class="topic info">Position</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -24,7 +25,7 @@
 				<td>Studying at <a href="https://khai.edu/ua/">XAI</a> the 5th faculty</td>
 			</tr>
 			<tr>
-				<td rowspan="2"><strong>Description</strong></td>
+				<th rowspan="2" class="topic">Description</th>
 				<td>I study at the Faculty of Radio Electronics, Computer Systems and Infocommunication</td>				
 			</tr>
 			<tr>
@@ -35,7 +36,7 @@
 				<td>Studied at the <a href="https://zplicey34.school.social">Zaporozhye Academic Lyceum №34</a></td>
 			</tr>
 			<tr>
-				<td rowspan="2"><strong>Description</strong></td>
+				<th rowspan="2"  class="topic">Description</th>
 				<td>He was the winner of Olympiads in programming and information and computer technologies</td>
 			</tr>
 			<tr>
@@ -43,18 +44,18 @@
 			</tr>
 		</tbody>
 	</table>
-	<h2>Skills:</h2>
-	<ul>
+	<h2 class="heading">Skills:</h2>
+	<ul class="skills">
 		<li>HTML</li>
 		<li>Computer techologies</li>
 		<li>Computer graphics radio engineering</li>
 	</ul>
-	<h2>Achievments:</h2>
+	<h2 class="heading">Achievments:</h2>
 	<ol>
 		<li>Won the regional Olympiad in programming</li>
 		<li>Entered the institute on a budget</li>
 		<li>Received the certificate of assertive communication</li>
 	</ol>
-	<a href="/form.html">Offer a job</a>
+	<a href="./form.html">Offer a job</a>
 </body>
 </html>
