--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<title>Curriculum vitae</title>
 </head>
 <body>
-	<h1 class="full-name">Yaroslav Livachov</h1>
-	<img src="/img/my photo.jpg" alt="My photo" width="250" height="250">
-	<h3 class="heading">Student</h3>
+	<h1 class="full-name significant">Yaroslav Livachov</h1>
+	<img src="./img/my photo.jpg" alt="My photo" width="250" height="250">
+	<h3 class="heading significant">Student</h3>
 	<h2>Education experience</h2>
 	<table border="1" cellspacing="0" cellpadding="10x">
 		<thead>
@@ -45,13 +45,13 @@
 		</tbody>
 	</table>
 	<h2 class="heading">Skills:</h2>
-	<ul class="skills">
+	<ul class="skills significant">
 		<li>HTML</li>
 		<li>Computer techologies</li>
 		<li>Computer graphics radio engineering</li>
 	</ul>
 	<h2 class="heading">Achievments:</h2>
-	<ol>
+	<ol class="significant">
 		<li>Won the regional Olympiad in programming</li>
 		<li>Entered the institute on a budget</li>
 		<li>Received the certificate of assertive communication</li>
