worked with element display

--- a/index.html
+++ b/index.html
@@ -8,54 +8,60 @@
 	<title>Curriculum vitae</title>
 </head>
 <body>
-	<h1 class="full-name significant">Yaroslav Livachov</h1>
-	<img src="./img/my photo.jpg" alt="My photo" width="250" height="250">
-	<h3 class="heading significant">Student</h3>
-	<h2>Education experience</h2>
-	<table border="1" cellspacing="0" cellpadding="10x">
-		<thead>
-			<tr>
-				<th class="topic">Period:</th>
-				<th class="topic info">Position</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td>2022 - 2028</td>
-				<td>Studying at <a href="https://khai.edu/ua/">XAI</a> the 5th faculty</td>
-			</tr>
-			<tr>
-				<th rowspan="2" class="topic">Description</th>
-				<td>I study at the Faculty of Radio Electronics, Computer Systems and Infocommunication</td>				
-			</tr>
-			<tr>
-				<td>I'm on a scholarship with no chance to fly out of it</td>
-			</tr>
-			<tr>
-				<td>2011 - 2022</td>
-				<td>Studied at the <a href="https://zplicey34.school.social">Zaporozhye Academic Lyceum №34</a></td>
-			</tr>
-			<tr>
-				<th rowspan="2"  class="topic">Description</th>
-				<td>He was the winner of Olympiads in programming and information and computer technologies</td>
-			</tr>
-			<tr>
-				<td>Helped at school on technical issues</td>
-			</tr>
-		</tbody>
-	</table>
-	<h2 class="heading">Skills:</h2>
-	<ul class="skills significant">
-		<li>HTML</li>
-		<li>Computer techologies</li>
-		<li>Computer graphics radio engineering</li>
-	</ul>
-	<h2 class="heading">Achievments:</h2>
-	<ol class="significant">
-		<li>Won the regional Olympiad in programming</li>
-		<li>Entered the institute on a budget</li>
-		<li>Received the certificate of assertive communication</li>
-	</ol>
+	<div class="short-description">
+		<div class="short-info">
+			<h1 class="full-name significant">Yaroslav Livachov</h1>
+			<h3 class="heading significant">Student</h3>
+		</div>
+		<img src="./img/my photo.jpg" alt="My photo" width="100px" height="100px">
+	</div>
+	<div class="basic-information">
+		<h2>Education experience</h2>
+		<table border="1" cellspacing="0" cellpadding="10x">
+			<thead>
+				<tr>
+					<th class="topic">Period:</th>
+					<th class="topic info">Position</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>2022 - 2028</td>
+					<td>Studying at <a href="https://khai.edu/ua/">XAI</a> the 5th faculty</td>
+				</tr>
+				<tr>
+					<th rowspan="2" class="topic">Description</th>
+					<td>I study at the Faculty of Radio Electronics, Computer Systems and Infocommunication</td>				
+				</tr>
+				<tr>
+					<td>I'm on a scholarship with no chance to fly out of it</td>
+				</tr>
+				<tr>
+					<td>2011 - 2022</td>
+					<td>Studied at the <a href="https://zplicey34.school.social">Zaporozhye Academic Lyceum №34</a></td>
+				</tr>
+				<tr>
+					<th rowspan="2"  class="topic">Description</th>
+					<td>He was the winner of Olympiads in programming and information and computer technologies</td>
+				</tr>
+				<tr>
+					<td>Helped at school on technical issues</td>
+				</tr>
+			</tbody>
+		</table>
+		<h2 class="heading">Skills:</h2>
+		<ul class="skills">
+			<li>HTML</li>
+			<li>Computer techologies</li>
+			<li>Computer graphics radio engineering</li>
+		</ul>
+		<h2 class="heading">Achievments:</h2>
+		<ol>
+			<li>Won the regional Olympiad in programming</li>
+			<li>Entered the institute on a budget</li>
+			<li>Received the certificate of assertive communication</li>
+		</ol>
+	</div>
 	<a href="./form.html">Offer a job</a>
 </body>
 </html>
