--- a/form.html
+++ b/form.html
@@ -4,26 +4,27 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="css/hire-me.css" rel="stylesheet" type="text/css">
 	<title>Form</title>
 </head>
 <body>
 	<h1>Hire me</h1>
 	<h3>Contact information</h3>
-	<table border="1" cellspacing="0" cellpadding="10px">
+	<table class="info">
 		<tbody>
 			<tr>
-				<th>
+				<th class="info-label">
 					<strong>Phone</strong>
 				</th>
-				<td>
+				<td class="info-main">
 					+380976881330
 				</td>
 			</tr>
 			<tr>
-				<th>
+				<th class="info-label">
 					<strong>Address</strong>
 				</th>
-				<td>
+				<td class="info-main">
 					Somewhere in Ukraine
 				</td>
 			</tr>
@@ -32,29 +33,35 @@
 	<form action="/form.html" method="get">
 		<fieldset>
 			<legend>Contact form</legend>
-			<table>
+			<table class="contact">
 				<tbody>
 					<tr>
-						<td><label for="email">E-mail:</label></td>
+						<td><label for="email">E-mail:<span class="red">*</span></label></td>
 						<td><input
 							type="email"
 							id="email"
+							class="email"
+							placeholder="Vika_Nat@example.com"
 							required
-							name="E-mail">
+							name="email">
+							<p class="error">Error message</p>
 						</td>
 					</tr>
 					<tr>
-						<td valign="top"><label for="description">Description:</label></td>
+						<td valign="top"><label for="description">Description:<span class="red">*</span></label></td>
 						<td><textarea
 							id="description"
 							name="description"
-							rows="10" 
-							cols="40"
+							placeholder="Write your wishes"
+							class="description"
+							type="text"
+							required
 							></textarea>
+							<p class="error">Error message</p>
 						</td>
 					</tr>
 					<tr>
-						<td><label for="work-type">Work type:</label></td>
+						<td><label for="work-type">Work type:<span class="red">*</span></label></td>
 						<td>
 							<select name="Work type:" id="work-type">
 							<option value="Work in the office">Work in the office</option>
