--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 				<dd><a href="mailto:aroslavlivachov@gmail.com">aroslavlivachov@gmail.com</a></dd>
 				<dt>Instagram</dt>
 				<dd><a href="https://www.instagram.com/yaricmix/">https://www.instagram.com/yaricmix/</a></dd>
+				<dt>Hire me</dt>
+				<dd><a href="./hire-me.html">hire-me.html</a></dd>
 			</dl>
 			<h2>Languages</h2>
 			<hr>
