new theme and variable usage

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet" type="text/css">
+	<link href="css/main-theme.css" rel="stylesheet" type="text/css">
+	<link href="css/my-theme.css" rel="stylesheet" type="text/css">
 	<title>Curriculum vitae</title>
 </head>
-<body>
+<body class="main-theme">
 	<header>
 		<h1 class="Fullname">Yaroslav <span>Livachov</span></h1>
 		<img src="./img/my photo.jpg">
