made an adaptive for smaller sizes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 	<link href="css/main-theme.css" rel="stylesheet" type="text/css">
 	<link href="css/my-theme.css" rel="stylesheet" type="text/css">
+	<link href="css/adaptive.css" rel="stylesheet" type="text/css">
 	<title>Curriculum vitae</title>
 </head>
 <body class="main-theme">
