--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		</ul>
 		<h2>Learning experience</h2>
 		<hr>
-		<table class="experience" cellspacing="0" cellpadding="0">
+		<table class="experience experience-second" cellspacing="0" cellpadding="0">
 			<tbody>
 				<tr>
 					<th>Institution name:</th>
@@ -74,7 +74,7 @@
 				</tr>
 			</tbody>
 		</table>
-		<table class="experience" cellspacing="0" cellpadding="0">
+		<table class="experience experience-first" cellspacing="0" cellpadding="0">
 			<tbody>
 				<tr>
 					<th>Institution name:</th>
