--- a/index.html
+++ b/index.html
@@ -18,84 +18,96 @@
 		<h1 class="Fullname">Yaroslav <span>Livachov</span></h1>
 		<img src="./img/my photo.jpg">
 		<div class="contact">
-			<h2>Contact</h2>
-			<hr>
-			<dl class="contact-list">
-				<dt>Address</dt>
-				<dd>Zaporozhye, Ukraine</dd>
-				<dt>Phone</dt>
-				<dd>+380976881330</dd>
-				<dt>E-mail</dt>
-				<dd><a href="mailto:aroslavlivachov@gmail.com">aroslavlivachov@gmail.com</a></dd>
-				<dt>Instagram</dt>
-				<dd><a href="https://www.instagram.com/yaricmix/">https://www.instagram.com/yaricmix/</a></dd>
-				<dt>Hire me</dt>
-				<dd><a href="./hire-me.html">hire-me.html</a></dd>
-			</dl>
-			<h2>Languages</h2>
-			<hr>
-			<ul class="languages-list">
-				<li>Ukrainian - B2</li>
-				<li>English - B1</li>
-			</ul>
+			<div class="contact-wrapper">
+				<h2>Contact</h2>
+				<hr>
+				<dl class="contact-list">
+					<dt>Address</dt>
+					<dd>Zaporozhye, Ukraine</dd>
+					<dt>Phone</dt>
+					<dd>+380976881330</dd>
+					<dt>E-mail</dt>
+					<dd><a href="mailto:aroslavlivachov@gmail.com">aroslavlivachov@gmail.com</a></dd>
+					<dt>Instagram</dt>
+					<dd><a href="https://www.instagram.com/yaricmix/">https://www.instagram.com/yaricmix/</a></dd>
+					<dt>Hire me</dt>
+					<dd><a href="./hire-me.html">hire-me.html</a></dd>
+				</dl>
+			</div>
+			<div class="languages-wrapper">
+				<h2>Languages</h2>
+				<hr>
+				<ul class="languages-list">
+					<li>Ukrainian - B2</li>
+					<li>English - B1</li>
+				</ul>
+			</div>
 		</div>
 	</header>
 	<section class="main">
-		<h2>Summary</h2>
-		<hr>
-		<p class="about">I am a first-year student at the Kharkov Aerospace Institute, before that I studied at the Zaporozhye Academic Lyceum No. 34 and graduated from there 11 classes, I also study the frontend in robotdreams.</p>
-		<h2>Skills Highlights</h2>
-		<hr>
-		<ul class="skill-list">
-			<li>HTML</li>
-			<li>CSS</li>
-			<li>Ukraine</li>
-			<li>English</li>
-			<li>Compas 3D</li>
-			<li>Photoshop</li>
-			<li>Pascal</li>
-			<li>Office</li>
-		</ul>
-		<h2>Learning experience</h2>
-		<hr>
-		<table class="experience experience-second" cellspacing="0" cellpadding="0">
-			<tbody>
-				<tr>
-					<th>Institution name:</th>
-					<td>Kharkiv Aviation Institute named after. M.Є. Zhukovsky</td>
-				</tr>
-				<tr>
-					<th>Period of study:</th>
-					<td>09/2023 - Present</td>
-				</tr>
-				<tr>
-					<th>Apprentice rank:</th>
-					<td>Student</td>
-				</tr>
-			</tbody>
-		</table>
-		<table class="experience experience-first" cellspacing="0" cellpadding="0">
-			<tbody>
-				<tr>
-					<th>Institution name:</th>
-					<td>Zaporozhye Academic Lyceum</td>
-				</tr>
-				<tr>
-					<th>Period of study:</th>
-					<td>09/2012 - 2023</td>
-				</tr>
-				<tr>
-					<th>Apprentice rank:</th>
-					<td>pupil</td>
-				</tr>
-			</tbody>
-		</table>
-		<h2>Education</h2>
-		<hr>
-		<ul class="education-list">
-			<li><span>Dates of studying:</span> from 2023 - present</li>
-			<li><span>Name of institution:</span> Kharkiv Aviation Institute named after. M.Є. Zhukovsky</li>
-		</ul>
+		<div class="summary-wrapper">
+			<h2>Summary</h2>
+			<hr>
+			<p class="about">I am a first-year student at the Kharkov Aerospace Institute, before that I studied at the Zaporozhye Academic Lyceum No. 34 and graduated from there 11 classes, I also study the frontend in robotdreams.</p>
+		</div>
+		<div class="skills-wrapper">
+			<h2>Skills Highlights</h2>
+			<hr>
+			<ul class="skill-list">
+				<li>HTML</li>
+				<li>CSS</li>
+				<li>Ukraine</li>
+				<li>English</li>
+				<li>Compas 3D</li>
+				<li>Photoshop</li>
+				<li>Pascal</li>
+				<li>Office</li>
+			</ul>
+		</div>
+		<div class="learning-wrapper">
+			<h2>Learning experience</h2>
+			<hr>
+			<table class="experience experience-second" cellspacing="0" cellpadding="0">
+				<tbody>
+					<tr>
+						<th>Institution name:</th>
+						<td>Kharkiv Aviation Institute named after. M.Є. Zhukovsky</td>
+					</tr>
+					<tr>
+						<th>Period of study:</th>
+						<td>09/2023 - Present</td>
+					</tr>
+					<tr>
+						<th>Apprentice rank:</th>
+						<td>Student</td>
+					</tr>
+				</tbody>
+			</table>
+			<table class="experience experience-first" cellspacing="0" cellpadding="0">
+				<tbody>
+					<tr>
+						<th>Institution name:</th>
+						<td>Zaporozhye Academic Lyceum</td>
+					</tr>
+					<tr>
+						<th>Period of study:</th>
+						<td>09/2012 - 2023</td>
+					</tr>
+					<tr>
+						<th>Apprentice rank:</th>
+						<td>pupil</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+		<div class="education-wrapper">
+			<h2>Education</h2>
+			<hr>
+			<ul class="education-list">
+				<li><span>Dates of studying:</span> from 2023 - present</li>
+				<li><span>Name of institution:</span> Kharkiv Aviation Institute named after. M.Є. Zhukovsky</li>
+			</ul>
+		</div>
 	</section>
 </body>
 </html>
