--- a/hire-me.html
+++ b/hire-me.html
@@ -4,80 +4,90 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="css/hire-me.css" rel="stylesheet" type="text/css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<title>Form</title>
+	<style>
+			@keyframes decrease{
+		0%{
+			transform:scale(2);
+			opacity: 0;
+		}
+		100%{
+			transform:scale(1);
+			opacity: 1;
+		}
+	}
+	.position-relative {animation: decrease 1.5s forwards linear;}
+	</style>
 </head>
-<body>
-	<section class="main">
-		<h1>Hire me</h1>
-		<h3>Contact information</h3>
-		<table class="info">
-			<tbody>
-				<tr>
-					<th class="info-label">
-						<strong>Phone</strong>
-					</th>
-					<td class="info-main">
-						+380976881330
-					</td>
-				</tr>
-				<tr>
-					<th class="info-label">
-						<strong>Address</strong>
-					</th>
-					<td class="info-main">
-						Somewhere in Ukraine
-					</td>
-				</tr>
-			</tbody>
-		</table><br />
-		<form action="/form.html" method="get">
-			<fieldset>
-				<legend>Contact form</legend>
-				<table class="contact">
-					<tbody>
-						<tr>
-							<td><label for="email">E-mail:<span class="red">*</span></label></td>
-							<td><input
-								type="email"
-								id="email"
-								class="email"
-								placeholder="Vika_Nat@example.com"
-								required
-								name="email">
-								<p class="error">Error message</p>
-							</td>
-						</tr>
-						<tr>
-							<td valign="top"><label for="description">Description:<span class="red">*</span></label></td>
-							<td><textarea
-								id="description"
-								name="description"
-								placeholder="Write your wishes"
-								class="description"
-								type="text"
-								required
-								></textarea>
-								<p class="error">Error message</p>
-							</td>
-						</tr>
-						<tr>
-							<td><label for="work-type">Work type:<span class="red">*</span></label></td>
-							<td>
-								<select name="Work type:" id="work-type">
-								<option value="Work in the office">Work in the office</option>
-								<option value="Remote work">Remote work</option>
-								<option value="One-time project">One-time project</option>
-								</select>
-							</td>
-						</tr>
-						<tr>
-							<td><input type="submit" value="Hire me"></td>
-						</tr>
-					</tbody>
-				</table>
-			</fieldset>
-		</form>
+<body class="position-absolute top-50 start-50 translate-middle">
+	<section class="position-relative">
+		<div>
+			<h1 class="fs-2">Hire me</h1>
+			<h3 class="fs-4">Contact information</h3>
+			<table class="border border-secondary">
+				<tbody>
+					<tr>
+						<th class="border border-secondary p-1">
+							<strong>Phone</strong>
+						</th>
+						<td class="border border-secondary p-1">
+							+380976881330
+						</td>
+					</tr>
+					<tr>
+						<th class="border border-secondary p-1">
+							<strong>Address</strong>
+						</th>
+						<td class="border border-secondary p-1">
+							Somewhere in Ukraine
+						</td>
+					</tr>
+				</tbody>
+			</table><br />
+				<form action="/form.html" method="get" class="row g-3 needs-validation">
+					<fieldset class="rounded border border-2 border-primary w-auto h-auto">
+						<legend>Contact form</legend>
+						<table class="w-auto">
+							<tbody>
+								<tr class="mb-3">
+									<td> <label for="FormControlInput1" class="form-label p-2">Email address</label></td>
+									<td><input 
+										type="email" 
+										class="form-control is-invalid" 
+										id="FormControlInput1"
+										required 
+										placeholder="name@example.com">
+									</td>
+								</tr>
+								<tr class="form-floating">
+									<td valign="top"><label for="floatingTextarea" class="form-label p-2">Example textarea</label></td>
+									<td><textarea 
+										class="form-control"
+										placeholder="Leave a comment here"
+										id="floatingTextarea" 
+										rows="3"></textarea>
+									</td>
+								</tr>
+								<tr>
+									<td><label for="work-type" class="p-2">Work type:</label></td>
+									<td>
+										<select class="form-select" aria-label="Default select example" id="work-type">
+										<option selected>Open this select menu</option>
+										<option value="1">Work in the office</option>
+										<option value="2">Remote work</option>
+										<option value="3">One-time project</option>
+										</select>
+									</td>
+								</tr>
+							</tbody>
+						</table>
+						<div class="col-12 pt-2">
+							<button class="btn btn-primary my-2" type="submit">Submit form</button>
+						</div>
+					</fieldset>
+				</form>
+		</div>
 	</section>
 </body>
 </html>
