Communication with the server

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="main-theme">
 	<header>
 		<h1 class="Fullname">Yaroslav <span>Livachov</span></h1>
-		<img src="./img/my photo.jpg" onclick="toggleZoom(this)">
+		<img src="./img/photo.jpg" onclick="toggleZoom(this)">
 		<div class="contact">
 			<div id="c" class="contact-wrapper">
 				<h2><span class="nav-letter">c</span>Contact</h2>
@@ -104,6 +104,12 @@
 				<li><span>Dates of studying:</span> from 2023 - present</li>
 				<li><span>Name of institution:</span> Kharkiv Aviation Institute named after. M.Є. Zhukovsky</li>
 			</ul>
+		</div>
+		<div id="m" class="project-wrapper">
+			<h2><span class="nav-letter">m</span>My projects</h2>
+			<hr>
+			<ol id="projects-list">
+			</ol>
 		</div>
 	</section>
 	<script src="./js/script.js"></script>
